# corosync

./: .clang-format  .gitarchivever  .gitattributes  .gitignore  .travis.yml  AUTHORS  CHANGELOG  Doxyfile  Doxyfile.in  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.inc  Makefile.samples  QUICKSTART  README.amf  README.devmap  README.md  README.recovery  SECURITY  TODO  aclocal.m4  autobuild.sh  autogen.sh  configure  configure.ac  configure.in  corosync.spec.in  index.html  loc  params.json  qnetd-algo-2nodelms.c
bindings/rust/: Cargo.toml.in  LICENSE  Makefile.am  README.md  build.rs.in  regenerate-sys.sh
conf/: .gitignore  COROSYNC-MIB.txt  Makefile.am  amf.conf  common.xsl  corosync-signals.conf  corosync.conf  corosync.conf.example  corosync.conf.example.in  corosync.conf.example.udpu  corosync.conf.example.udpu.in  corosync.rnc  corosync.xml.example  groups.conf  network.conf  openais.conf  openais_amf_example.conf  rnc_tokenize.py  rnctree.py  rng2asciidocman.xsl  rng2lens.xsl  simplification-wrapper.xsl  simplification.xsl  xml2conf.xsl  xsddatatypes2lens.xsl
conf/lenses/: corosync.aug
conf/logrotate/: Makefile.am  corosync-copytruncate.in  corosync-reopen.in
conf/tmpfiles.d/: Makefile.am  corosync-qnetd.conf
cts/agents/: .gitignore  Makefile.am  cmap-dispatch-deadlock.sh  cmap-dispatch-deadlock.sh.in  common_test_agent.c  common_test_agent.h  confdb-dispatch-deadlock.sh  (+9 more)
exec/: .gitignore  Makefile  Makefile.am  Makefile.in  aisparser.c  aispoll.c  aispoll.h  amf.c  amf.h  amfapp.c  amfcluster.c  amfcomp.c  amfconfig.c  amfconfig.h  amfnode.c  amfsg.c  amfsi.c  amfsu.c  amfutil.c  apidef.c  apidef.h  cfg.c  cfg.h  ckpt.c  ckpt.h  clm.c  clm.h  cmap.c  confdb.c  config.h  coroipcs.c  coroipcs.h  coroparse.c  coropoll.c  cpg.c  crypto.c  crypto.h  cs_queue.h  etherfilter.c  etherfilter.h  (+107 more)
include/: Makefile.am  Makefile.in  ais_amf.h  ais_ckpt.h  ais_clm.h  ais_evt.h  ais_msg.h  ais_types.h  ais_util.h  cfg.h  confdb.h  coroapi.h  cpg.h  evs.h  hdb.h  ipc_amf.h  ipc_cfg.h  ipc_ckpt.h  ipc_clm.h  ipc_confdb.h  ipc_cpg.h  ipc_evs.h  ipc_evt.h  ipc_gen.h  ipc_lck.h  ipc_msg.h  jhash.h  list.h  mar_ckpt.h  mar_clm.h  mar_cpg.h  mar_gen.h  openaisCfg.h  queue.h  rmd.h  saAis.h  saAmf.h  saCkpt.h  saClm.h  saEvt.h  (+4 more)
init/: .gitignore  Makefile.am  Makefile.in  README  corosync-notifyd.conf.in  corosync-notifyd.in  corosync-notifyd.service.in  corosync-qdevice.in  corosync-qdevice.service.in  corosync-qdevice.sysconfig.example  corosync-qnetd.in  corosync-qnetd.service.in  corosync-qnetd.sysconfig.example  corosync.conf.in  corosync.in  corosync.service.in  corosync.sysconfig.example  generic  generic.in  mvlcge  notifyd.in  redhat
lcr/: .gitignore  Makefile  Makefile.am  Makefile.in  README.lcr  lcr_ckpt.h  lcr_comp.h  lcr_ifact.c  lcr_ifact.h  libtest_a.c  libtest_b.c  test.c  uic.c  uis.c
lib/: Makefile  Makefile.am  Makefile.in  amf.c  cfg.c  ckpt.c  clm.c  cmap.c  confdb.c  coroipc.c  coroipcc.c  cpg.c  evs.c  evt.c  lck.c  libOpenaisCfg.versions  libSaAis.versions  libSaAmf.versions  libSaCkpt.versions  libSaClm.versions  libSaEvt.versions  libSaLck.versions  libSaMsg.versions  libcfg.versions  libcmap.versions  libconfdb.versions  libcoroipc.versions  libcoroipcc.versions  libcoroutil.versions  libcpg.versions  libevs.versions  libpload.versions  libquorum.versions  libsam.versions  libvotequorum.versions  msg.c  pload.c  quorum.c  sa-confdb.c  sa-confdb.h  (+4 more)
man/: .gitignore  Makefile  Makefile.am  Makefile.in  amf.conf.5  cmap_context_get.3  cmap_context_get.3.in  cmap_context_set.3  cmap_context_set.3.in  cmap_dec.3  cmap_dec.3.in  cmap_delete.3  cmap_delete.3.in  cmap_dispatch.3  cmap_dispatch.3.in  cmap_fd_get.3.in  cmap_finalize.3  cmap_finalize.3.in  cmap_get.3.in  cmap_inc.3  cmap_inc.3.in  cmap_initialize.3  cmap_initialize.3.in  cmap_initialize_map.3.in  cmap_iter_finalize.3.in  cmap_iter_init.3.in  cmap_iter_next.3.in  cmap_keys.7  cmap_keys.8  cmap_overview.3  cmap_overview.8  cmap_set.3.in  cmap_track_add.3.in  cmap_track_delete.3  cmap_track_delete.3.in  confdb_context_get.3  confdb_context_set.3  confdb_dispatch.3  confdb_fd_get.3  confdb_finalize.3  (+169 more)
pkgconfig/: Makefile  Makefile.am  Makefile.in  corosync.pc.in  libcorosync_common.pc.in  libsam.pc.in  libtemplate.pc.in
qdevices/: .gitignore  Makefile.am  corosync-qdevice-net-certutil.sh  corosync-qdevice-net.c  corosync-qdevice-tool.c  corosync-qdevice.c  corosync-qnetd-certutil.sh  corosync-qnetd-tool.c  corosync-qnetd.c  dynar-getopt-lex.c  dynar-getopt-lex.h  dynar-simple-lex.c  dynar-simple-lex.h  dynar-str.c  dynar-str.h  dynar.c  dynar.h  log-common.c  log-common.h  log.c  log.h  msg.c  msg.h  msgio.c  msgio.h  node-list.c  node-list.h  nss-sock.c  nss-sock.h  pr-poll-array.c  pr-poll-array.h  process-list.c  process-list.h  qdevice-advanced-settings.c  qdevice-advanced-settings.h  qdevice-cmap.c  qdevice-cmap.h  qdevice-config.h  qdevice-heuristics-cmd-str.h  qdevice-heuristics-cmd.c  (+152 more)
services/: Makefile  Makefile.am  Makefile.in  cfg.c  cmap.c  confdb.c  cpg.c  evs.c  mon.c  pload.c  testquorum.c  votequorum.c  wd.c
test/: .gitignore  Makefile  Makefile.am  Makefile.in  ckpt-rd.c  ckpt-wr.c  ckptbench.c  ckptbenchth.c  ckptstress.c  clc_cli_script  cpgbench.c  cpgbenchzc.c  cpgbound.c  cpghum.c  cpgverify.c  evsbench.c  evsverify.c  evtbench.c  logsys_s.c  logsys_s1.c  logsys_s2.c  logsys_t1.c  logsys_t2.c  logsysbench.c  logsysrec.c  openais-cfgtool.c  ploadstart.sh  publish.c  sa_error.c  sa_error.h  stress_cpgcontext.c  stress_cpgfdget.c  stress_cpgzc.c  subscription.c  test.cpp  testamf.c  testamf1.c  testamf2.c  testamf3.c  testamf4.c  (+27 more)
tools/: .gitignore  Makefile  Makefile.am  Makefile.in  corosync-blackbox  corosync-blackbox.sh  corosync-cfgtool.c  corosync-cmapctl.c  corosync-cpgtool.c  corosync-fplay.c  corosync-keygen.c  corosync-notifyd.c  corosync-notifyd.sysconfig.example  corosync-objctl.c  corosync-pload.c  corosync-quorumtool.c  corosync-xmlproc.sh  util.c  util.h
wireshark/: Makefile.am  packet-corosync-totemknet.c  packet-corosync-totemknet.h
(+212 files in other folders)
